--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 #entry-div{
     background-image: radial-gradient(circle, #dbd8e3 20%, #2a2438 80%);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: absolute;
     overflow: hidden;
     display: flex;
@@ -20,10 +20,54 @@
     border-bottom: #352f44 10px solid; 
 }
 
-#pfp-div img{
+#pfp-div{
+    height: 14vh;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+#pfp-div button , img{
     height: 12vh;
     margin: 0.5vw;
     border-radius: 50%;
     box-shadow: 2px 4px rgba(0, 0, 0, 0.596);
+    cursor: pointer;
 }
 
+#pfp-div img:hover{
+    margin-bottom: 2vw;
+    transition: all 0.5s ease-in-out;
+}
+
+.selected{
+    margin-bottom: 2vw;
+}
+
+#name-div{
+    margin: 2vw;
+}
+
+#name-div label{
+    font-size: 2rem;
+    margin: 1vw;
+    font-weight: 600;
+    border-right: #2a2438 4px solid;
+    padding-right: 4px;
+}
+
+#name-div input{
+    background: none;
+    border: none;
+    margin: 1vw;
+    font-size: 2rem;
+}
+
+#continue{
+    font-size: 2.5rem;
+    background-color: #dbd8e3cc;
+    border: none;
+    padding: 0.5vw;
+    border-radius: 1vh;
+    cursor: pointer;
+}
