--- a/src/styles.css
+++ b/src/styles.css
@@ -115,7 +115,12 @@ header h1{
     font-size: 2.5rem;
 }
 
-#projects button{
+#project-btn-container{
+    display: flex;
+    flex-direction: column;
+}
+
+#project-btn-container button{
     font-size: 2rem;
     background: none;
     color: #dbd8e3;
@@ -124,7 +129,16 @@ header h1{
     cursor: pointer;
 }
 
-#projects button:hover{
+#add-project{
+    font-size: 2rem;
+    background: none;
+    color: #00df25;
+    border: none;
+    margin: 1vw;
+    cursor: pointer;
+}
+
+#project-btn-container button:hover{
     font-size: 2.5rem;
     color: white;
     transition: ease 0.2s;
